css fix (media, column gaps, etc)

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -63,20 +63,29 @@
   }
 }
 
-.logo-link:hover {
-  transform: scale(1.1);
-}
-
-.logo-img {
-  width: 24px;
-  height: 23px;
-  margin-top: 40px;
-  margin-right: 10px;
-
   @media screen and (min-width: 768px) {
-    margin-top: 45px;
+    .logo-link:hover {
+      transform: scale(1.1);
+    }
   }
-}
+  
+  .logo-img {
+    width: 24px;
+    height: 23px;
+    margin-top: 40px;
+    margin-right: 10px;
+    transition: transform 200ms;
+    
+    @media screen and (min-width: 768px) {
+      margin-top: 45px;
+    }
+  }
+  
+  @media screen and (max-width: 767px) {
+    .logo-img:hover {
+      transform: scale(1.2);
+    }
+  }
 
 .logo-txt {
   display: none;
@@ -191,7 +200,7 @@
 }
 
 .input-search {
-  width: 394px;
+  width: 280px;
   height: 20px;
   background-color: transparent;
   margin-top: 60px;
@@ -237,10 +246,6 @@
 
   @media screen and (min-width: 768px) {
     top: 115;
-    right: 50;
-  }
-  @media screen and (min-width: 1280px) {
-    right: 20;
   }
 }
 
