--- a/src/sass/layout/_main_for_index.scss
+++ b/src/sass/layout/_main_for_index.scss
@@ -1,3 +1,41 @@
-h5 {
-    width: 100px;
+.item-films {
+    width: 280px;
+    min-height: 443px;
+
+    @media screen and (min-width: 768px) {
+        width: 336px;
+        min-height: 494px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        width: 395px;
+        min-height: 634px;
+    }
+}
+
+.img-cover {
+    width: 100%;
+    height: 402px;
+
+    @media screen and (min-width: 768px) {
+        min-height: 455px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        min-height: 593px;
+    }
+}
+
+.list-films {
+    gap: 20px;
+
+    @media screen and (min-width: 768px) {
+        gap: 32px;
+        justify-content: space-between;
+    }
+
+    @media screen and (min-width: 1280px) {
+        gap: 15px;
+        justify-content: left;
+    }
 }
